<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyAppLvl1.1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Go!</string>
    <string name="button2_text">Button</string>
    <string name="button3_text">Light</string>
    <string name="button_lsn_text">Launch!</string>

</resources>
